// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventList renders correctly 1`] = `
<SectionList
  ItemSeparatorComponent={[Function]}
  SectionSeparatorComponent={[Function]}
  contentContainerStyle={
    Object {
      "backgroundColor": "#ffffff",
      "paddingTop": 0,
    }
  }
  data={Array []}
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onEndReachedThreshold={2}
  onRefresh={[Function]}
  refreshing={false}
  renderItem={[Function]}
  renderSectionFooter={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  sections={
    Array [
      Object {
        "data": Array [
          Object {
            "fields": Object {
              "endTime": Object {
                "en-GB": "2018-08-11T00:00",
              },
              "eventPriceHigh": Object {
                "en-GB": "0",
              },
              "eventPriceLow": Object {
                "en-GB": "0",
              },
              "eventsListPicture": Object {
                "en-GB": "http://placekitten.com/200/300",
              },
              "locationName": Object {
                "en-GB": "Somewhere",
              },
              "name": Object {
                "en-GB": "some event",
              },
              "startTime": Object {
                "en-GB": "2018-07-10T00:00",
              },
            },
            "sys": Object {
              "contentType": Object {
                "sys": Object {
                  "id": "",
                },
              },
              "id": "1",
              "revision": 1,
              "type": "",
            },
          },
          Object {
            "fields": Object {
              "endTime": Object {
                "en-GB": "2018-08-11T00:00",
              },
              "eventPriceHigh": Object {
                "en-GB": "0",
              },
              "eventPriceLow": Object {
                "en-GB": "0",
              },
              "eventsListPicture": Object {
                "en-GB": "http://placekitten.com/200/300",
              },
              "locationName": Object {
                "en-GB": "Somewhere",
              },
              "name": Object {
                "en-GB": "some other",
              },
              "startTime": Object {
                "en-GB": "2018-07-10T00:00",
              },
            },
            "sys": Object {
              "contentType": Object {
                "sys": Object {
                  "id": "",
                },
              },
              "id": "2",
              "revision": 1,
              "type": "",
            },
          },
        ],
        "key": "2018-07-10",
      },
      Object {
        "data": Array [
          Object {
            "fields": Object {
              "endTime": Object {
                "en-GB": "2018-08-11T00:00",
              },
              "eventPriceHigh": Object {
                "en-GB": "0",
              },
              "eventPriceLow": Object {
                "en-GB": "0",
              },
              "eventsListPicture": Object {
                "en-GB": "http://placekitten.com/200/300",
              },
              "locationName": Object {
                "en-GB": "Somewhere",
              },
              "name": Object {
                "en-GB": "some other",
              },
              "startTime": Object {
                "en-GB": "2018-07-11T00:00",
              },
            },
            "sys": Object {
              "contentType": Object {
                "sys": Object {
                  "id": "",
                },
              },
              "id": "2",
              "revision": 1,
              "type": "",
            },
          },
        ],
        "key": "2018-07-11",
      },
    ]
  }
  stickySectionHeadersEnabled={true}
  updateCellsBatchingPeriod={50}
  windowSize={10}
/>
`;

exports[`EventList renders item separators correctly 1`] = `
<Component
  style={
    Object {
      "height": 12,
    }
  }
/>
`;

exports[`EventList renders items correctly 1`] = `
<ContentPadding
  padding={Object {}}
  style={Object {}}
>
  <EventCard
    addSavedEvent={[Function]}
    endTime="2018-08-11T00:00"
    eventPriceHigh="0"
    eventPriceLow="0"
    id="1"
    image={undefined}
    isSaved={false}
    locationName="Somewhere"
    name="some event"
    onPress={[Function]}
    removeSavedEvent={[Function]}
    startTime="2018-07-10T00:00"
  />
</ContentPadding>
`;

exports[`EventList renders section footers correctly 1`] = `
<Component
  style={
    Object {
      "height": 6,
    }
  }
/>
`;

exports[`EventList renders section headers correctly 1`] = `
<SectionHeader
  badgeValue={undefined}
  hasShadow={true}
  title="Tuesday 10 July"
/>
`;

exports[`EventList renders section separators correctly 1`] = `
<Component
  style={
    Object {
      "height": 6,
    }
  }
/>
`;
